--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ev-charger-app-db
-spring.datasource.username=user
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
+spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.ddl-auto=create
 jwt.header=Authorization
 jwt.secret=titok_adja
