--- a/src/frontend/ev-charger-app-client/package.json
+++ b/src/frontend/ev-charger-app-client/package.json
@@ -10,12 +10,14 @@
 	"dependencies": {
 		"axios": "^0.23.0",
 		"core-js": "^3.6.5",
+		"sockjs-client": "^1.5.2",
 		"vue": "^2.6.11",
 		"vue-axios": "^3.3.7",
 		"vue-browser-geolocation": "^1.8.0",
 		"vue-router": "^3.2.0",
 		"vuetify": "^2.4.0",
-		"vuex": "^3.4.0"
+		"vuex": "^3.4.0",
+		"webstomp-client": "^1.2.6"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
