--- a/src/frontend/ev-charger-app-client/package.json
+++ b/src/frontend/ev-charger-app-client/package.json
@@ -9,30 +9,31 @@
 	},
 	"dependencies": {
 		"axios": "^0.23.0",
-		"core-js": "^3.6.5",
+		"core-js": "^3.19.1",
 		"sockjs-client": "^1.5.2",
 		"vue": "^2.6.11",
-		"vue-axios": "^3.3.7",
+		"vue-axios": "^3.4.0",
 		"vue-browser-geolocation": "^1.8.0",
-		"vue-router": "^3.2.0",
-		"vuetify": "^2.4.0",
+		"vue-router": "^3.5.3",
+		"vuetify": "^2.5.14",
 		"vuex": "^3.4.0",
 		"webstomp-client": "^1.2.6"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-eslint": "~4.5.0",
-		"@vue/cli-plugin-router": "~4.5.0",
-		"@vue/cli-plugin-vuex": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
+		"@vue/cli-plugin-babel": "^4.5.15",
+		"@vue/cli-plugin-eslint": "^4.5.15",
+		"@vue/cli-plugin-router": "^4.5.15",
+		"@vue/cli-plugin-vuex": "^4.5.15",
+		"@vue/cli-service": "^4.5.15",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^6.2.2",
 		"sass": "~1.32.0",
 		"sass-loader": "^10.0.0",
-		"vue-cli-plugin-vuetify": "~2.4.2",
+		"vue-cli-plugin-vuetify": "^2.4.3",
 		"vue-template-compiler": "^2.6.11",
 		"vue2-google-maps": "^0.10.7",
-		"vuetify-loader": "^1.7.0"
+		"vuetify-loader": "^1.7.0",
+		"webpack": "^4.46.0"
 	}
 }
