trying to fix github actions

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -22,7 +22,8 @@ jobs:
         image: norberttalpos/ev-charger-app-frontend
         tags: latest
         registry: docker.io
-        dockerfile: ./src/frontend/ev-charger-app-client/Dockerfile
+        context: ./src/frontend/ev-charger-app-client
+        dockerfile: Dockerfile
         username: norberttalpos
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
         
