--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,8 +13,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      name: Check out code
+      - uses: actions/checkout@v2
+        name: Check out code
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build with Maven
+        run:
+          mvn clean package --file pom.xml
+
+      - uses: actions/checkout@v1
+
+      - run: mkdir -p target/
+
+      - run: echo hello > target/ev-charger-app-server.jar
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ev-charger-app-server
+          path: target/
+
+  docker:
+
+    runs-on: ubuntu-latest
+
+    steps:
 
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push frontend image
