--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -39,24 +39,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: norberttalpos
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - uses: mr-smithers-excellent/docker-build-push@v5
-      name: Build & push frontend image
-      with:
-        image: norberttalpos/ev-charger-app-frontend
-        tags: latest
-        registry: docker.io
-        context: ./src/frontend/ev-charger-app-client
-        dockerfile: Dockerfile
-        username: norberttalpos
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-        
-    - uses: mr-smithers-excellent/docker-build-push@v5
-      name: Build & push backend image
-      with:
-        image: norberttalpos/ev-charger-app-backend
-        tags: latest
-        registry: docker.io
-        dockerfile: ./Dockerfile
-        username: norberttalpos
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build & push frontend image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/frontend/ev-charger-app-client
+          file: Dockerfile
+          push: true
+          tags: norberttalpos/ev-charger-app-frontend:latest
+
+      - name: Build & push backend image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: norberttalpos/ev-charger-app-backend:latest
