--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -45,18 +45,30 @@ jobs:
           username: norberttalpos
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Set up Docker Buildx for Frontend
+        uses: docker/setup-buildx-action@v1
+        id: frontend-builder
+
+      - name: Set up Docker Buildx for Backend
+        uses: docker/setup-buildx-action@v1
+        id: backend-builder
+
       - name: Build & push frontend image
+        id: docker_build1
         uses: docker/build-push-action@v2
         with:
           context: ./src/frontend/ev-charger-app-client
           file: ./src/frontend/ev-charger-app-client/Dockerfile
+          builder: ${{ steps.frontend-builder.outputs.name }}
           push: true
           tags: norberttalpos/ev-charger-app-frontend:latest
 
       - name: Build & push backend image
+        id: docker_build2
         uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile
+          builder: ${{ steps.backend-builder.outputs.name }}
           push: true
           tags: norberttalpos/ev-charger-app-backend:latest
