--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -23,17 +23,6 @@ jobs:
         run:
           mvn clean install -DskipTests --file pom.xml
 
-      - uses: actions/checkout@v1
-
-      - run: mkdir -p target/
-
-      - run: echo hello > target/ev-charger-app-server.jar
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: ev-charger-app-server
-          path: target/
-
   docker:
     needs: [build]
     runs-on: ubuntu-latest
@@ -53,18 +42,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
         id: backend-builder
 
-      - name: Build & push frontend image
-        id: docker_build1
-        uses: docker/build-push-action@v2
-        with:
-          context: ./src/frontend/ev-charger-app-client
-          file: ./src/frontend/ev-charger-app-client/Dockerfile
-          builder: ${{ steps.frontend-builder.outputs.name }}
-          push: true
-          tags: norberttalpos/ev-charger-app-frontend:latest
-
       - name: Build & push backend image
-        id: docker_build2
+        id: docker-build-backend
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -72,3 +51,13 @@ jobs:
           builder: ${{ steps.backend-builder.outputs.name }}
           push: true
           tags: norberttalpos/ev-charger-app-backend:latest
+
+      - name: Build & push frontend image
+        id: docker-build-frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/frontend/ev-charger-app-client
+          file: ./src/frontend/ev-charger-app-client/Dockerfile
+          builder: ${{ steps.frontend-builder.outputs.name }}
+          push: true
+          tags: norberttalpos/ev-charger-app-frontend:latest
