--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,7 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '**'
   pull_request:
     branches: [ master ]
 
@@ -34,6 +35,9 @@ jobs:
           username: norberttalpos
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx for Frontend
         uses: docker/setup-buildx-action@v1
         id: frontend-builder
@@ -56,7 +60,7 @@ jobs:
         id: docker-build-frontend
         uses: docker/build-push-action@v2
         with:
-          context: ./src/frontend/ev-charger-app-client
+          context: ./src/frontend/ev-charger-app-client/
           file: ./src/frontend/ev-charger-app-client/Dockerfile
           builder: ${{ steps.frontend-builder.outputs.name }}
           push: true
