--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+        name: Check out code
+
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -20,17 +23,17 @@ jobs:
 
       - name: Build with Maven
         run:
-          mvn clean package -DskipTests --file pom.xml
+          mvn clean install -DskipTests --file pom.xml
 
       - uses: actions/checkout@v1
 
       - run: mkdir -p target/
 
-      - run: echo hello > target/ev-charger-app-server.jar
+      - run: echo hello > target/de-sy-file.jar
 
       - uses: actions/upload-artifact@v1
         with:
-          name: ev-charger-app-server
+          name: de-sy-file
           path: target/
 
       - name: Log in to Docker Hub
