--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -16,6 +16,18 @@ jobs:
       - uses: actions/checkout@v2
         name: Check out code
 
+      - name: Add application.properties secret
+        env:
+          SPRING_APPLICATION_PROPERTIES: ${{ secrets.SPRING_APPLICATION_PROPERTIES }}
+        run: |
+          echo $SPRING_APPLICATION_PROPERTIES > $RUNNER_TEMP/src/main/resources/application.properties
+
+      - name: Add google maps api key secret js file
+        env:
+          GOOGLE_MAPS_API_KEY_JS: ${{ secrets.GOOGLE_MAPS_API_KEY_JS }}
+        run: |
+          echo $GOOGLE_MAPS_API_KEY_JS > $RUNNER_TEMP/src/frontend/ev-charger-app-client/key.js
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
