--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           GOOGLE_MAPS_API_KEY_JS: ${{ secrets.GOOGLE_MAPS_API_KEY_JS }}
         run: |
-          touch ./src/main/resources/application.properties
+          touch ./src/frontend/ev-charger-app-client/key.js
           echo $GOOGLE_MAPS_API_KEY_JS > ./src/frontend/ev-charger-app-client/key.js
 
       - name: Log in to Docker Hub
