--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,8 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches:
-      - '**'
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
