trying to fix email service unsatisfied dependency in docker deployment

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           touch ./src/main/resources/application.properties
           echo $SPRING_APPLICATION_PROPERTIES > ./src/main/resources/application.properties
-          cat $SPRING_APPLICATION_PROPERTIES
+          cat ./src/main/resources/application.properties
 
       - name: Add google maps api key secret js file
         env:
