--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           touch ./src/frontend/ev-charger-app-client/key.js
           echo $GOOGLE_MAPS_API_KEY_JS > ./src/frontend/ev-charger-app-client/key.js
+          cat ./src/frontend/ev-charger-app-client/key.js
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
