--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -15,13 +15,12 @@ jobs:
       - uses: actions/checkout@v2
         name: Check out code
 
-      - name: Add application.properties secret
-        env:
-          SPRING_APPLICATION_PROPERTIES: ${{ secrets.SPRING_APPLICATION_PROPERTIES }}
-        run: |
-          touch ./src/main/resources/application.properties
-          echo $SPRING_APPLICATION_PROPERTIES > ./src/main/resources/application.properties
-          cat ./src/main/resources/application.properties
+      - name: set smtp password in application properties
+        uses: christian-draeger/write-properties@1.0.0
+        with:
+          path: './src/main/resources/application-prod.properties'
+          property: 'spring.mail.password'
+          value: ${{ secrets.SMTP_PASSWORD }}
 
       - name: Add google maps api key secret js file
         env:
@@ -29,7 +28,6 @@ jobs:
         run: |
           touch ./src/frontend/ev-charger-app-client/key.js
           echo $GOOGLE_MAPS_API_KEY_JS > ./src/frontend/ev-charger-app-client/key.js
-          cat ./src/frontend/ev-charger-app-client/key.js
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
