--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 			<version>2.9.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
